Closed
Bug 1391689
Opened 8 years ago
Closed 7 years ago
[MacOS] Left portion of browser window cut off in corner
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
mozilla57
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox55 | --- | unaffected |
firefox56 | --- | unaffected |
firefox57 | --- | fixed |
People
(Reporter: marcia, Assigned: mstange)
References
Details
(Keywords: regression)
Attachments
(3 files)
Seen after updating to Mozilla/5.0 (Macintosh; Intel Mac OS X 10.13; rv:57.0) Gecko/20100101 Firefox/57.0, Build 20170818100226
STR:
1. Open the browser
2. Observe the attached screenshot
This issue is not observed on my 10.12 machine running the same build. It is also not an issue using a new profile on the same machine.
Yesterday I was playing around with customizing the toolbar...
Reporter | ||
Comment 1•8 years ago
|
||
I now see this on my 10.12 machine as well. I tried the "refresh nightly" option and that seemed to fix it.
Assignee | ||
Comment 2•8 years ago
|
||
This is most probably a regression from bug 1390888. I made some changes there that I thought would account for the offset, but apparently it doesn't always work.
Reporter | ||
Comment 3•7 years ago
|
||
Tracking this issue for Firefox 57, as it makes the browser difficult to minimize or go full screen.
tracking-firefox57:
--- → +
Assignee | ||
Comment 4•7 years ago
|
||
I haven't been able to reproduce this yet.
Comment 6•7 years ago
|
||
(In reply to Tooru Fujisawa [:arai] from comment #1)
> not reproducible on build 20170828100127 with clean profile on macOS
> 10.12.6, on retina display (I think you're also using retina display,
> according to the screenshot)
> does the issue happen on safe mode and/or clean profile?
No, does not seem to happen in safe mode for me.
Comment 7•7 years ago
|
||
if the issue doesn't happen on safe mode or clean profile for 2 people,
it would mean that it's most likely conflict with addons.
try disabling all of them and enable one by one to see which one is causing the issue.
Reporter | ||
Comment 8•7 years ago
|
||
I don't think it is extensions for me, at least on my 10.12 machine. That nightly profile has no extensions installed and is using the default theme. Refreshing the browser option fixed it for me on that machine.
The 10.13 machine I am running on, where I first saw it, has some extensions, but right now they are all disabled. Launching on that machine with a new profile fixes the issue. On that machine I spent some time testing customizing the toolbar, so not sure if that had anything to do with it.
Comment 9•7 years ago
|
||
Same here, disabled all extensions and restarted, no change.
Comment 10•7 years ago
|
||
Disabling gfx.webrender.enabled fixed this for me.
Assignee | ||
Comment 11•7 years ago
|
||
Oh, of course. Thanks for the tip with webrender. The dark red tab bar in Marcia's screenshot should have tipped me off.
![]() |
||
Comment 12•7 years ago
|
||
Markus, does gfx have a webrenderer regression meta for bugs like this?
Clearing status, webrenderer won't ship in 57.
status-firefox57:
affected → ---
Flags: needinfo?(mstange)
Updated•7 years ago
|
tracking-firefox57:
+ → ---
Assignee | ||
Comment 13•7 years ago
|
||
(In reply to Jim Mathies [:jimm] from comment #12)
> Markus, does gfx have a webrenderer regression meta for bugs like this?
Not that I'm aware of, no. We have different meta bugs for different "stages" of shipping (bugs blocking bug 1386678), but the more specific ones are all about Windows, so this Mac issue wouldn't really qualify. I'm just going to make it block the generic webrender bug.
Blocks: webrender
Flags: needinfo?(mstange)
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Comment 16•7 years ago
|
||
mozreview-review |
Comment on attachment 8905487 [details]
Bug 1391689 - Pass the correct origin when drawing the titlebar overlay with webrender.
https://reviewboard.mozilla.org/r/177300/#review182496
Attachment #8905487 -
Flags: review?(matt.woodrow) → review+
Comment 17•7 years ago
|
||
mozreview-review |
Comment on attachment 8905488 [details]
Bug 1391689 - Simplify titlebar image update logic.
https://reviewboard.mozilla.org/r/177302/#review182504
Attachment #8905488 -
Flags: review?(matt.woodrow) → review+
Comment 18•7 years ago
|
||
We're sorry, Autoland could not rebase your commits for you automatically. Please manually rebase your commits and try again.
hg error in cmd: hg rebase -s 4e1b49ee7a5c -d 1a536787340c: rebasing 418657:4e1b49ee7a5c "Bug 1391689 - Pass the correct origin when drawing the titlebar overlay with webrender. r=mattwoodrow"
merging widget/cocoa/nsChildView.mm
rebasing 418658:b325117b56ce "Bug 1391689 - Simplify titlebar image update logic. r=mattwoodrow" (tip)
merging widget/cocoa/nsChildView.mm
warning: conflicts while merging widget/cocoa/nsChildView.mm! (edit, then use 'hg resolve --mark')
unresolved conflicts (see hg resolve, then hg rebase --continue)
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Comment 21•7 years ago
|
||
Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/autoland/rev/39dc0da77e09
Pass the correct origin when drawing the titlebar overlay with webrender. r=mattwoodrow
https://hg.mozilla.org/integration/autoland/rev/71652e025914
Simplify titlebar image update logic. r=mattwoodrow
Comment 22•7 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/39dc0da77e09
https://hg.mozilla.org/mozilla-central/rev/71652e025914
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox57:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Updated•7 years ago
|
status-firefox55:
--- → unaffected
status-firefox56:
--- → unaffected
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•