Bug 1391689 - Pass the correct origin when drawing the titlebar overlay with webrender. r=mattwoodrow

MozReview-Commit-ID: DdMjUFr0LR9

--HG--
extra : rebase_source : b6014d729a1c3140a8c4124d3f56091b1a674342